BUG FIX: Firefox 3 showed scrollbars on chrome menus. not no more

--- a/themes/common/css/required/containermodule.css
+++ b/themes/common/css/required/containermodule.css
@@ -146,6 +146,9 @@ a.addmodule:hover{
 }
 
 /* The menu */
+#containermodulemenu.yuimenu.show-scrollbars {
+	overflow:visible;
+}
 
 #containermodulemenu{
 	text-align:left;
